Fixed typo on line 34 comment - Index.html

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -31,7 +31,7 @@
         <p></p> <!--Empty paragraph for spacing.-->
 
         <div id="save-file-input">
-        <!-- Add save file selection herge eg. ("Drag and drop or select save file (use botton for select)" in a box.) -->
+        <!-- Add save file selection here eg. ("Drag and drop or select save file (use botton for select)" in a box.) -->
        </div>
 
 
